--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         
         <div class="section-title">👥 Contributors</div>
         <div class="content-item">
-            <span class="contributor-item">Kejal (rkejal)</span>
-            <span class="contributor-item">Sylwia (spisarcz)</span>
-            <span class="contributor-item">Sai Deepak (saizdeep)</span>
-            <span class="contributor-item">Gaurav (rathiga)</span>
+            <span class="contributor-item">Kejal </span>
+            <span class="contributor-item">Sylwia </span>
+            <span class="contributor-item">Sai Deepak </span>
+            <span class="contributor-item">Gaurav </span>
         </div>
 
         <div class="section-title">🔧 Tools Used</div>
