--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: black; /* black metallic background */
-      color: #00ff99; /* neon green text */
+      background: #000000; /* solid black background */
+      color: #39ff14; /* neon green text */
       font-family: Arial, sans-serif;
       overflow: hidden;
     }
@@ -41,13 +41,23 @@
       }
     }
 
-    h2, h3 {
+    h2 {
       margin: 10px 0;
-      color: #00ffcc;
+      color: #00ff99; /* slightly brighter neon green for headings */
+    }
+
+    h3 {
+      margin: 10px 0;
+      color: #39ff14; /* neon green for subheadings */
+    }
+
+    p {
+      margin: 5px 0;
+      color: #39ff14;
     }
 
     a {
-      color: #00ffff;
+      color: #00ffcc; /* neon cyan for links */
       text-decoration: none;
     }
 
