--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #000000; /* solid black background */
-      color: #39ff14; /* neon green text */
+      background: #000000;
+      color: #39ff14;
       font-family: Arial, sans-serif;
       overflow: hidden;
     }
 
     .scroll-container {
-      height: 100%;
+      height: 100vh;
       width: 80%;
       overflow: hidden;
       position: relative;
@@ -26,42 +26,61 @@
 
     .scroll-text {
       position: absolute;
-      bottom: -100%;
+      bottom: 0; /* Start from bottom */
       width: 100%;
       text-align: center;
-      animation: scroll-up 20s linear infinite;
+      animation: scroll-up 30s linear infinite; /* Increased duration */
+      padding-bottom: 50vh; /* Add padding at bottom */
     }
 
     @keyframes scroll-up {
-      from {
-        bottom: -100%;
+      0% {
+        transform: translateY(100%); /* Start fully below viewport */
       }
-      to {
-        bottom: 100%;
+      100% {
+        transform: translateY(-100%); /* End fully above viewport */
       }
+    }
+
+    /* Add pause on hover */
+    .scroll-text:hover {
+      animation-play-state: paused;
     }
 
     h2 {
-      margin: 10px 0;
-      color: #00ff99; /* slightly brighter neon green for headings */
+      margin: 30px 0; /* Increased margin */
+      color: #00ff99;
+      font-size: 1.8em;
     }
 
     h3 {
-      margin: 10px 0;
-      color: #39ff14; /* neon green for subheadings */
+      margin: 25px 0; /* Increased margin */
+      color: #39ff14;
+      font-size: 1.4em;
     }
 
     p {
-      margin: 5px 0;
+      margin: 20px 0; /* Increased margin */
       color: #39ff14;
+      line-height: 1.6;
+    }
+
+    /* New styles for contributors */
+    .contributors {
+      margin: 30px 0;
+      padding: 20px;
+      background: rgba(57, 255, 20, 0.1);
+      border-radius: 10px;
     }
 
     a {
-      color: #00ffcc; /* neon cyan for links */
+      color: #00ffcc;
       text-decoration: none;
+      transition: color 0.3s;
     }
 
     a:hover {
+      color: #fff;
       text-decoration: underline;
     }
   </style>
@@ -71,12 +90,17 @@
     <div class="scroll-text">
       <h2>About This Dashboard</h2>
 
-      <h3>Contributors</h3>
-      <p>Kejal @rkejal, Sylwia @spisarcz, Sai Deepak @saizdeep, Gaurav @rathiga</p>
+      <div class="contributors">
+        <h3>Contributors</h3>
+        <p>Kejal @rkejal</p>
+        <p>Sylwia @********</p>
+        <p>Sai Deepak @saizdeep</p>
+        <p>Gaurav ********</p>
+      </div>
 
       <h3>Resources</h3>
       <p>
-        Data Source:  
+        Data Source:<br>
         <a href="https://www.iea.org/reports/global-energy-review-2025/co2-emissions" target="_blank">
           IEA Global Energy Review 2025 - CO₂ Emissions
         </a>
@@ -87,6 +111,9 @@
 
       <h3>Vision & Purpose</h3>
       <p>A sustainable vision: reducing CO₂ in every last mile.</p>
+
+      <!-- Added spacing at bottom -->
+      <div style="height: 50vh;"></div>
     </div>
   </div>
 </body>
