--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
       <div class="contributors">
         <h3>Contributors</h3>
-        <p>Kejal @rkejal</p>
-        <p>Sylwia @********</p>
-        <p>Sai Deepak @saizdeep</p>
-        <p>Gaurav ********</p>
+        <p>Kejal(@rkejal)</p>
+        <p>Sylwia(@spisarcz)</p>
+        <p>Sai Deepak(@saizdeep)</p>
+        <p>Gaurav(@rathiga)</p>
       </div>
 
       <h3>Resources</h3>
